fixed collapsing --> now collapses properly, uses grids

--- a/app/assets/stylesheets/homepage/_product-sections.scss
+++ b/app/assets/stylesheets/homepage/_product-sections.scss
@@ -48,7 +48,6 @@
    margin-bottom: 45px;
    font-family: 'Proximanova';
    color: white;
-   width: 700px; 
    line-height: 1.85;
  }
 
@@ -256,15 +255,14 @@
        display: block;
        margin: 0 auto;
        .title {
-         text-align: center;
          color: white;
          padding-top: 8em;
-         width: 40em;
+         width: 88%;
          margin: 0 auto;
          font-size: 1.5em;
 
          h1 {
-           font-size: 2.13em;
+           font-size: 2.1em;
          }
        }
 
